# stoa

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  SECURITY.md  competitor-wins-kimi.md  ideas.md  migration-plan.md  new-bugs-kimi.md  next.config.ts  package-lock.json  package.json  playwright.config.ts  revert-state.md  server.ts  tomorrow-plan.md  tsconfig.json  vitest.config.ts
.github/: CODEOWNERS
.husky/: pre-commit
app/: globals.css  layout.tsx  page.tsx  sw.ts
components/: AutoApproveBadge.tsx  AutoModeDialog.tsx  ChatView.tsx  ConductorPanel.tsx  ConfirmProvider.tsx  ContextMeter.tsx  CostIndicator.tsx  DirectoryPicker.tsx  FileMentions.tsx  FilePicker.tsx  FolderPicker.tsx  MessageInput.tsx  MiniTerminal.tsx  NotificationSettings.tsx  OnboardingChecklist.tsx  PRCreationModal.tsx  PromptQueueModal.tsx  Providers.tsx  QuickSwitcher.tsx  SessionCard.tsx  SessionDiffModal.tsx  SessionPreviewPopover.tsx  SessionQuickActions.tsx  SessionSummaryModal.tsx  ShortcutsHelp.tsx  SidebarFooter.tsx  SidebarRail.tsx  SnapshotTimeline.tsx  StoaGuide.tsx  WorkerCard.tsx  status-glyph.tsx
contexts/: PaneContext.tsx
docs/: ROADMAP.md  dogfoot.md  fleet-management.md  phase-review-backlog.md  swarm-findings.md
hooks/: useBackendType.ts  useBuilderHistory.ts  useCanvasSelection.ts  useCopyToClipboard.ts  useDirectoryBrowser.ts  useDrawerAnimation.ts  useFileDrop.ts  useFileEditor.ts  useGlobalKeybindings.ts  useHaptics.ts  useKeyRepeat.ts  useKeybarVisibility.ts  (+20 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
(+951 files in other folders)
